Added advice and linked to index.html

--- a/advice/dodric-sykes-advice.html
+++ b/advice/dodric-sykes-advice.html
@@ -16,7 +16,7 @@
  
         <section>
             <div class="advice">
-                <h4> Practice makes perfect!</h4>
+                <h4> The key is patience!!!</h4>
                 <p> Try and practice any new skills that you may learn in order to help build your skill and understanding.</p>
 
                 <p> Consistency, while hard to maintain, goes a long way in the learning process.</p>
@@ -30,7 +30,7 @@
  
         <footer>
             <!-- replace Skillcrush with your name here -->
-            <p>&copy; Copyright D'Odric 2020.</p>
+            <p>&copy; Copyright D'Odric 2021.</p>
         </footer>
     </body>
 </html>
