--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <a href="advice/marina-saito-advice.html" target="_blank">Marina's Advice</a><br>
         <a href="advice/melanie-nlee-advice.html" target="_blank" style="color:deeppink"> Melanie's Advice </a><br>
         <a href="advice/sara-h-advice.html" target="_blank">Sara's Advice</a><br>
-        <a href="advice/dodric-sykes-advice" target="_blank"> D'Odric's Super Helpful Advice</a>
+        <a href="advice/dodric-sykes-advice.html" target="_blank"> D'Odric's Super Helpful and Necessary Advice</a>
     </section>
 
   </body>
